# little-blue-bird

./: .gitignore  FEATURE_DESIGN.md  FEATURE_PROMPT_1.md  FEATURE_PROMPT_2.md  README.md  WRITING_MODULE_PROMPT.md  WRITING_MODULE_PROMPT_2.md  WRITING_MODULE_PROMPT_3.md  app.pyw
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  ai_provider.rs  claude_api.rs  commands.rs  config.rs  dream.rs  inspiration.rs  journal.rs  main.rs  memes.rs  mood.rs  personality.rs  social.rs  theater.rs  tracker.rs  tray_icon.rs  villain.rs  vocab.rs  world.rs  writing.rs
src/scripts/: app.js  dream.js  home.js  inspiration.js  journal.js  monitor.js  museum.js  personality.js  settings.js  voice-input.js  world.js  writing.js
src/styles/: main.css
